force-app/main/default/objects/SignupStatus__e/SignupStatus__e.object-meta.xml
<CustomObject>
    <label>SignupStatus</label>
    <pluralLabel>SignupStatus</pluralLabel>
</CustomObject>