force-app/main/default/objects/SignupStatus__e/fields/OrgId__c.field-meta.xml
<CustomField>
    <fullName>OrgId__c</fullName>
    <label>OrgId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>