force-app/main/default/objects/SignupStatus__e/fields/OrgInstance__c.field-meta.xml
<CustomField>
    <fullName>OrgInstance__c</fullName>
    <label>OrgInstance</label>
    <length>15</length>
    <type>Text</type>
</CustomField>