force-app/main/default/objects/SignupStatus__e/fields/OrgStatus__c.field-meta.xml
<CustomField>
    <fullName>OrgStatus__c</fullName>
    <label>OrgStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>